--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@ people come to this for the music and food. Their service a topnotch.</strong></
   <tr>
     <td>Sea Food</td>
     <td><i class="fa fa-remove"></i></td>
-	<td><img id="myImg" src="seafood.jpg" alt="seafood" style="width:100%;max-width:100px"></td>
+	<td><img id="myImg" src="./RES/seafood.jpg" alt="seafood" style="width:100%;max-width:100px"></td>
 </tr>
 
   <tr>
     <td>Vagitables</td>
     <td><i class="fa fa-check"></i></td>
-	<td><img id="myImg" src="vegetables.jpg" alt="vegetables" style="width:100%;max-width:100px"></td>
+	<td><img id="myImg" src="./RES/vegetables.jpg" alt="vegetables" style="width:100%;max-width:100px"></td>
 	</tr>
 
 <td>Steak</td>
     <td><i class="fa fa-check"></i></td>
-	<td><img id="myImg" src="steak1.jpg" alt="steak1" style="width:100%;max-width:100px"></td>
+	<td><img id="myImg" src="./RES/steak1.jpg" alt="steak1" style="width:100%;max-width:100px"></td>
 </tr>
 </table>
 
@@ -51,49 +51,49 @@ people come to this for the music and food. Their service a topnotch.</strong></
 </tr>
 <tr>
 <td>Rice</td>
-<td><img id="myImg" src="rice.jpg" alt="rice" style="width:100%;max-width:100px"></td>
+<td><img id="myImg" src="./RES/rice.jpg" alt="rice" style="width:100%;max-width:100px"></td>
 <td>R90</td>
 </tr>
 <tr>
 <td>Pap</td>
-<td><img id="myImg" src="Pap.jpg" alt="Pap" style="width:100%;max-width:100px"></td>
+<td><img id="myImg" src="./RES/Pap.jpg" alt="Pap" style="width:100%;max-width:100px"></td>
 <td>R120</td>
 <tr>
 <td>Chicken stew</td>
-<td><img id="myImg" src="chicken stew.jpg" alt="chicken stew" style="width:100%;max-width:80px"></td>
+<td><img id="myImg" src="./RES/beef stew.jpg" alt="chicken stew" style="width:100%;max-width:80px"></td>
 <td>R120</td>
 </tr>
 <tr>
 <td>Beef stew</td>
-<td><img id="myImg" src="beef stew.jpg" alt="beef stew" style="width:100%;max-width:100px"></td>
+<td><img id="myImg" src="./RES/beef stew.jpg" alt="beef stew" style="width:100%;max-width:100px"></td>
 <td>R130</td>
 </tr>
 <tr>
 <td>Steak</td>
-<td><img id="myImg" src="steak.jpg" alt="steak" style="width:100%;max-width:120px"></td>
+<td><img id="myImg" src="./RES/steak.jpg" alt="steak" style="width:100%;max-width:120px"></td>
 <td>R150</td>
 </tr>
 <tr>
 <td>Roasted checken</td>
-<td><img id="myImg" src="roasted chicken.jpg" alt="roasted chicken" style="width:100%;max-width:100px"></td>
+<td><img id="myImg" src="./RES/roasted chicken.jpg" alt="roasted chicken" style="width:100%;max-width:100px"></td>
 <td>R190</td>
 </tr>
 <tr>
 <td>Pasta</td>
-<td><img id="myImg" src="pasta.jpg" alt="pasta" style="width:100%;max-width:100px"></td>
+<td><img id="myImg" src="./RES/pasta.jpg" alt="pasta" style="width:100%;max-width:100px"></td>
 <td>R85</td>
 </tr>
 <td>Fish and chips</td>
-<td><img id="myImg" src="fish and chips.jpg" alt="fish and chips" style="width:100%;max-width:100px"></td>
+<td><img id="myImg" src="./RES/fish and chips.jpg" alt="fish and chips" style="width:100%;max-width:100px"></td>
 <td>R150</td>
 <tr>
 <td>Hake</td>
-<td><img id="myImg" src="hake.jpg" alt="hake" style="width:100%;max-width:100px"></td>
+<td><img id="myImg" src="./RES/hake.jpg" alt="hake" style="width:100%;max-width:100px"></td>
 <td>R170</td>
 </tr>
 <tr>
 <td>Salands</td>
-<td><img id="myImg" src="salands.jpg" alt="salands" style="width:100%;max-width:100px"></td>
+<td><img id="myImg" src="./RES/salands.jpg" alt="salands" style="width:100%;max-width:100px"></td>
 <td>R50</td>
 </tr>
 
